// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding a new todo 1`] = `
<li
  className=""
>
  <div
    className="view"
  >
    <input
      checked={false}
      className="toggle"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      onDoubleClick={[Function]}
    >
      My new todo
    </label>
    <button
      className="destroy"
      onClick={[Function]}
    />
  </div>
</li>
`;

exports[`Editing todo 1`] = `
<li
  className=""
>
  <div
    className="view"
  >
    <input
      checked={false}
      className="toggle"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      onDoubleClick={[Function]}
    >
      Label changed
    </label>
    <button
      className="destroy"
      onClick={[Function]}
    />
  </div>
</li>
`;

exports[`Editing todo 2`] = `
<li
  className=""
>
  <div
    className="view"
  >
    <input
      checked={false}
      className="toggle"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      onDoubleClick={[Function]}
    >
      Label changed
    </label>
    <button
      className="destroy"
      onClick={[Function]}
    />
  </div>
</li>
`;
